# ripper

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/commands/: mod.rs  scrape.rs
